--- a/src/app/shared/dialogs/dialog-piano-ferie/dialog-piano-ferie.component.html
+++ b/src/app/shared/dialogs/dialog-piano-ferie/dialog-piano-ferie.component.html
@@ -1,10 +1,12 @@
 <div>
 <mat-toolbar>
     <span>PIANO FERIE</span>
+    <div fxFlex></div>
+    <button mat-icon-button mat-dialog-close >
+      <mat-icon>close</mat-icon>
+    </button>
   </mat-toolbar>
-  <ng-container [ngTemplateOutlet]="templateInserimento" *ngIf="data.tipologia =='I'" ></ng-container>
-  <ng-container [ngTemplateOutlet]="templateDelete" *ngIf="data.tipologia=='D'"></ng-container>
-  <ng-container [ngTemplateOutlet]="templateModifica" *ngIf="data.tipologia=='M'"></ng-container>
+  <ng-container [ngTemplateOutlet]="templateInserimento" *ngIf="data.tipologia =='I'"></ng-container>
   <ng-container [ngTemplateOutlet]="templateListaFerie" *ngIf="data.tipologia=='G'"></ng-container>
   
 </div>
@@ -13,39 +15,42 @@
   <div fxLayout="row" fxLayoutAlign="center center" style="margin-top: 6px;margin-bottom: 5px;" *ngIf="data.tipologia=='I'">
     <form #myForm="ngForm" (ngSubmit)="onSubmit(myForm)">
       <div fxLayout="column" fxLayoutAlign="space-between center" fxLayoutGap="5px">
-        <h2>Inserire le credenziali</h2>
+        <h2>Inserire i dati</h2>
+        <mat-form-field>
+            <input matInput placeholder="Descrizione" name="descrizione" [(ngModel)]="descrizione" required>
+          </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Ore Totali" name="oreTotali" [(ngModel)]="oreTotali" required>
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Giorni Lavorativi Totali" name="giorniLavorativiTotali" [(ngModel)]="giorniLavorativiTotali" required>
+          </mat-form-field>
         <mat-form-field>
             <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker"  (dateChange)="cambiaDataPartenza($event)">
+            <input matInput [matDatepicker]="picker"  (dateChange)="cambiaDataPartenza($event)" required>
             <mat-hint>MM/DD/YYYY</mat-hint>
-
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
           <mat-form-field>
             <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker1"  (dateChange)="cambiaDataFine($event)">
+            <input matInput [matDatepicker]="picker1"  (dateChange)="cambiaDataFine($event)" required>
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
             <mat-datepicker #picker1></mat-datepicker>
           </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Descrizione" name="descrizione" [(ngModel)]="descrizione">
-          </mat-form-field>
+        
         <button mat-raised-button type="submit">Invia</button>
       </div>
     </form>
   </div>
 </ng-template>
 
-<ng-template #templateDelete></ng-template>
-
-<ng-template #templateModifica></ng-template>
 
 <ng-template #templateListaFerie>
   <h2 mat-dialog-title>Lista Piani Ferie</h2>
 <mat-dialog-content class="mat-typography">
-  <div fxLayout="row" fxLayoutAlign="center center" style="margin-top: 6px;margin-bottom: 5px" >
+  <div fxLayout="row" fxLayoutAlign="center center" style="margin-top: 6px;margin-bottom: 5px">
       <div fxLayout="column" fxLayoutAlign="space-between center">
         <mat-list>
           <mat-list-item *ngFor="let pianoferie of pianoferie">
@@ -54,7 +59,16 @@
             <div matListItemTitle>{{pianoferie.descrizione}}</div>
             <div matListItemLine>Data inizio: {{pianoferie.dataInizio | date}}</div>
             <div matListItemLine>Data fine: {{pianoferie.dataFine | date}}</div>
-            <button mat-raised-button color="primary" (click)="deletePianoFerie(pianoferie.idPianoFerie)" *ngIf="pianoferie.idPianoFerie">
+            <div matListItemLine>Ore totali: {{pianoferie.oreTotali}}</div>
+            <div matListItemLine>Giorni Lavorativi: {{pianoferie.giorniLavorativiTotali}}</div>
+            <div matListItemLine>ID: {{pianoferie.idPianoFerie}}</div>
+            <button mat-raised-button color="accent" (click)="dettaglioPianoFerie(pianoferie.idPianoFerie,'I')" *ngIf="pianoferie.idPianoFerie">
+              <mat-icon style="margin-left: 5px;">info</mat-icon>
+            </button>
+            <button mat-raised-button color="accent" (click)="dettaglioPianoFerie(pianoferie.idPianoFerie,'M')" *ngIf="pianoferie.idPianoFerie">
+              <mat-icon style="margin-left: 5px;">edit</mat-icon>
+            </button>
+            <button mat-raised-button color="warn" (click)="deletePianoFerie(pianoferie.idPianoFerie)" *ngIf="pianoferie.idPianoFerie">
               <mat-icon style="margin-left: 5px;">delete</mat-icon>
             </button>
           </div>
@@ -64,4 +78,5 @@
   </div>
 </mat-dialog-content>
 </ng-template>
+
 
