--- a/src/app/pages/homepage-component/homepage-component.component.html
+++ b/src/app/pages/homepage-component/homepage-component.component.html
@@ -1,7 +1,7 @@
 <h2>Bentornato {{username}}</h2>
 <span>Cosa vuoi fare con piani ferie</span>
 <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-  <mat-button-toggle style="color: black;" (click)="openModal('I')">Inserire</mat-button-toggle>
-  <mat-button-toggle style="color: black;" (click)="openModal('G')">Visualizza piani ferie</mat-button-toggle>
+  <mat-button-toggle  (click)="openModal('I')">Inserire</mat-button-toggle>
+  <mat-button-toggle  (click)="openModal('G')">Visualizza piani ferie</mat-button-toggle>
 </mat-button-toggle-group>
 
