Gestione utente responsabile, ruolo e gruppo, inoltre gestione footer

--- a/src/app/pages/homepage-component/homepage-component.component.html
+++ b/src/app/pages/homepage-component/homepage-component.component.html
@@ -1,8 +1,10 @@
 <h2>Bentornato {{username}}</h2>
+<div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
 <span>Cosa vuoi fare con piani ferie</span>
-<mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style">
-  <mat-button-toggle  (click)="openModalDipendente('I')">Inserire</mat-button-toggle>
-  <mat-button-toggle  (click)="openModalDipendente('G')">Visualizza piani ferie</mat-button-toggle>
-  <mat-button-toggle  (click)="openModalResponsabile('L')" *ngIf="ruolo=='RESPONSABILE'">Vedi lista dipendenti</mat-button-toggle>
-</mat-button-toggle-group>
+<div fxLayout="row" fxLayoutGap="10px">
+  <button mat-raised-button color="primary" (click)="openModalDipendente('I')">Inserire</button>
+  <button mat-raised-button color="primary" (click)="openModalDipendente('G')">Visualizza piani ferie</button>
+  <button mat-raised-button color="primary" (click)="openModalResponsabile('L')" *ngIf="ruolo=='RESPONSABILE'">Vedi lista dipendenti</button>
+</div>
+</div>
 
