--- a/src/app/shared/dialogs/dialog-recover-password/dialog-recover-password.component.html
+++ b/src/app/shared/dialogs/dialog-recover-password/dialog-recover-password.component.html
@@ -1,17 +1,23 @@
-<mat-toolbar>
-    <span>RECUPERO PASSWORD</span>
-    <div fxFlex></div>
-    <button mat-icon-button mat-dialog-close>
+<div>
+    <mat-toolbar>
+        <span>RECUPERO PASSWORD</span>
+      <div fxFlex></div>
+      <button mat-icon-button mat-dialog-close>
         <mat-icon>close</mat-icon>
-    </button>
-</mat-toolbar>
-<form #form="ngForm" (ngSubmit)="onSubmit(form)" style="margin-top: 30px;">
+      </button>
+    </mat-toolbar>
     <div
-        fxLayout="column"
-        fxLayoutAlign="space-between center"
-        fxLayoutGap="5px"
+      fxLayout="row"
+      fxLayoutAlign="center center"
+      style="margin-top: 6px; margin-bottom: 5px"
     >
-        <mat-form-field>
+      <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+        <div
+          fxLayout="column"
+          fxLayoutAlign="space-between center"
+          fxLayoutGap="5px"
+          style="margin-top: 30px;"
+        ><mat-form-field>
             <mat-label>Username</mat-label>
             <input
                 matInput
@@ -21,11 +27,13 @@
                 required
             />
         </mat-form-field>
-        <button mat-raised-button type="submit" [disabled]="!form.touched">
+          <button mat-raised-button type="submit" [disabled]="!form.valid" >
             Invia
-        </button>
+          </button>
+        </div>
+      </form>
     </div>
-</form>
+  </div>
 <!-- fai uno spinner -->
 <div fxLayout="row" fxLayoutAlign="center center" *ngIf="isLoading"><mat-spinner style="height: 20px;width: 20px;"></mat-spinner> Inviando email..</div>
 
