--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: #505050;
     color:  white;    
 }
+
+mat-form-field {
+  width: 100%;
+}
