--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar fxLayout="row" fxLayoutAlign="end center">
+<mat-toolbar fxLayout="row" fxLayoutAlign="end center" class="footer_finale">
     <span>Questo è il mio footer</span>
 </mat-toolbar>
