--- a/src/app/shared/dialogs/dialog-lista-dipendenti/dialog-lista-dipendenti.component.html
+++ b/src/app/shared/dialogs/dialog-lista-dipendenti/dialog-lista-dipendenti.component.html
@@ -6,7 +6,13 @@
           <mat-icon>close</mat-icon>
         </button>
       </mat-toolbar>
-      <h2 mat-dialog-title>Lista Dipendenti</h2>
+      <div fxLayout="row" style="padding: 10px;">
+        <h2 mat-dialog-title>Lista Piani Ferie</h2>
+        <div fxFlex></div>
+        <mat-form-field style="width: 300px;">
+          <input matInput [ngModel]="filtro" (ngModelChange)="onChangeEvent($event)" placeholder="Search">
+        </mat-form-field>
+      </div>
       <mat-dialog-content class="mat-typography">
         <div fxLayout="row" fxLayoutAlign="center center" class="user-list">
           <div fxLayout="column" fxLayoutAlign="space-between center">
